# main.go
@@ -1,6 +1,8 @@
 package main
 
 import (
+	"crypto/subtle"
+
 	"github.com/Payback159/tempido/handlers"
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
@@ -8,6 +10,7 @@ import (
 
 func main() {
 	e := echo.New()
+	ag := e.Group("/namespace")
 
 	//todo: handle the error!
 	c, _ := handlers.NewContainer()
@@ -15,19 +18,27 @@ func main() {
 	// Middleware
 	e.Use(middleware.Logger())
 	e.Use(middleware.Recover())
+	ag.Use(middleware.BasicAuth(func(username, password string, c echo.Context) (bool, error) {
+		// Be careful to use constant time comparison to prevent timing attacks
+		if subtle.ConstantTimeCompare([]byte(username), []byte("admin")) == 1 &&
+			subtle.ConstantTimeCompare([]byte(password), []byte("admin")) == 1 {
+			return true, nil
+		}
+		return false, nil
+	}))
 
 	// GetVersion - Outputs the version of Tempido
-	e.Static("/version", "static/swagger/")
-	e.Static("/", "static/swagger/")
+	e.Static("/version", "docs/swagger/")
+	e.Static("/", "docs/swagger/")
 
 	// CreateNamespace - Create a new namespace
-	e.POST("/namespace", c.CreateNamespace)
+	ag.POST("/namespace", c.CreateNamespace)
 
 	// DeleteNamespace - Deletes a namespace
-	e.DELETE("/namespace/:namespace", c.DeleteNamespace)
+	ag.DELETE("/namespace/:namespace", c.DeleteNamespace)
 
 	// GetNamespaceByName - Find namespace by name
-	e.GET("/namespace/:namespace", c.GetNamespaceByName)
+	ag.GET("/namespace/:namespace", c.GetNamespaceByName)
 
 	// Start server
 	e.Logger.Fatal(e.Start(":8080"))
